test/tasty/neg/src-2/TestLogarithms.check
TestLogarithms_fail.scala:10: error: value - is not a member of tastytest.Logarithms.Logarithm
  val l3 = l1 - l2 // error
              ^
1 error
